# libs/api-interface/src/lib/entities/settings.dto.ts
@@ -1,0 +1,6 @@
+export interface SettingsDTO {
+  id: string;
+  createdAt: string;
+  updatedAt: string;
+  publishResults: boolean;
+}
