# libs/api-interface/src/lib/entities/settings.ts
@@ -1,0 +1,8 @@
+import * as dayjs from 'dayjs';
+
+export interface Settings {
+  id: string;
+  createdAt: dayjs.Dayjs;
+  updatedAt: dayjs.Dayjs;
+  publishResults: boolean;
+}
