# libs/api-interface/src/lib/schemas/index.ts
@@ -1,6 +1,8 @@
 export * from './result/create-result.schema';
 export * from './result/update-result.schema';
 
+export * from './settings/update-settings.schema';
+
 export * from './station/create-station.schema';
 export * from './station/update-station.schema';
 
