# libs/api-interface/src/lib/schemas/settings/update-settings.schema.ts
@@ -1,0 +1,10 @@
+import * as joi from 'joi';
+
+export interface UpdateSettingsSchema {
+  publishResults?: boolean;
+}
+
+export const UpdateSettingsSchema: joi.ObjectSchema<UpdateSettingsSchema> =
+  joi.object({
+    publishResults: joi.boolean(),
+  });
